--- a/package.json
+++ b/package.json
@@ -2,20 +2,33 @@
   "name": "extendscript-ts-sample-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run check-types && npm run build:bundle",
+    "build:bundle": "webpack",
+    "build:compile-binary": "npx jsxbin -i dist/app.bundle.js -o dist/app.bundle.jsxbin",
+    "check-types": "tsc --noEmit",
+    "check-modules-compatibility": "are-you-es5 check -rv ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browserify": "^17.0.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-object-assign": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
+    "are-you-es5": "^2.1.2",
+    "babel-loader": "^8.2.3",
     "jsxbin": "^2.2.0",
     "types-for-adobe": "^6.0.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "extendscript-es5-shim": "^0.3.1"
+    "extendscript-es5-shim": "^0.3.1",
+    "fast-xml-parser": "^4.0.0-beta.7",
+    "os-browserify": "^0.3.0"
   }
 }
